--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Juanega</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
         padding: 25px;
@@ -21,3 +22,4 @@
   </body>
 
 </html>
+
