--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
       body {
         padding: 25px;
       }
+
+      #pJuanega {
+        border-radius: 7px;
+        padding: 7px;
+        display: inline-block;
+        box-shadow: 4px 4px 8px 3px rgba(0,0,0,0.3);
     </style>
   </head>
   <body>
       <button onclick="printJuanega()">Print Juanega</button>
-      <p id="pJuanega"></p>
+      <div>
+        <p id="pJuanega"></p>
+      </div>
+    
       <script>
         let nega = "nega";
         
@@ -22,4 +31,5 @@
   </body>
 
 </html>
+
 
